--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,13 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.lzy.widget:view-core:0.1.5'
-    compile'com.google.code.gson:gson:2.7'
-    compile'org.litepal.android:core:1.4.1'
-    compile'com.squareup.okhttp3:okhttp:3.4.1'
+    compile'org.greenrobot:eventbus:3.1.1'
     compile'com.github.bumptech.glide:glide:3.7.0'
     compile'com.jude:rollviewpager:1.2.9'
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:design:25.3.1'
+    compile 'com.kyleduo.switchbutton:library:2.0.0'
     testCompile 'junit:junit:4.12'
 }
