--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MoreCourseActivity"></activity>
+        <activity android:name=".MoreNewsActivity"></activity>
+        <activity android:name=".CourseContentActivity"></activity>
+        <activity android:name=".NewsContentActivity"></activity>
+        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".AboutUsActivity"></activity>
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".ServiceActivity"></activity>
+        <activity android:name=".RegisterActivity"></activity>
+        <activity android:name=".SelfCenterActivity"></activity>
+        <activity android:name=".WelcomeActivity" android:theme="@style/AppTheme.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MoreCourseActivity"></activity>
-        <activity android:name=".MoreNewsActivity"></activity>
-        <activity android:name=".CourseContentActivity"></activity>
-        <activity android:name=".NewsContentActivity"></activity>
     </application>
 </manifest>
